2004-09-30  Andy Wingo  <wingo@pobox.com>

	* autogen-pkg.sh (autogen_pkg): An unrecognized config $i becomes
	guile-gnome-$i-YYYYMMDD+$source.

2004-09-27  Andy Wingo  <wingo@pobox.com>

	* autogen-pkg.sh: Require g-wrap = 1.9.3. g-wrap is in unstable
	releases, and as such we require specific micro versions.

	* autogen-support.sh: sed character range fix.

2004-09-22  Andy Wingo  <wingo@pobox.com>

	* autogen-pkg.sh, autogen-support.sh, autogen.sh, common.mk,
	dev-environ.in: Added license blocks.

	* README: No g-wrap 1.9.2

2004-09-21  Andy Wingo  <wingo@pobox.com>

	* NEWS: Updated.

	* AUTHORS: Removed the RELEASE-NOTES entries, they're in docs/
	now.

2004-09-19  Andy Wingo  <wingo@pobox.com>

	* Makefile.am.bottom: Added. Dist HACKING.

	* autogen-pkg.sh: Only generate the SUBDIRS part of Makefile.am;
	append Makefile.am.bottom to the end.

	* HACKING: Added.

	* scripts/tla-for-each: New script, does a tla command for all
	arch subdirs of the toplevel dir.

2004-09-17  Andy Wingo  <wingo@pobox.com>

	* autogen-pkg.sh (EXTRA_DIST): No more old release notes.

2004-09-16  Andy Wingo  <wingo@pobox.com>

	* AUTHORS: Add update-inventories to my AUTHORS list.

	* Makefile.am (EXTRA_DIST): No more old release notes.

	* RELEASE-NOTES-0.2.0.txt, RELEASE-NOTES-0.5.0.txt: Moved to the
	docs category.

	* NEWS: Distilled.

	* README: Updated.

2004-09-15  Andy Wingo  <wingo@pobox.com>

	* scripts/update-inventories: New script, will create
	arch-inventory entries for any untagged-source files. Useful for
	when you build in the source tree.

2004-09-08  Andy Wingo  <wingo@pobox.com>

	* NEWS: Initial version, still needs to be filled in.

	* AUTHORS: Updated.

2004-09-05  Andy Wingo  <wingo@pobox.com>

	* autogen-pkg.sh: No more m4/ dir, it was empty anyway. Use
	AC_PROG_LIBTOOL.

2004-09-04  Andy Wingo  <wingo@pobox.com>

	* autogen-pkg.sh (autogen_pkg): For the dev build-config, set
	package=guile-gnome-dev, so that no dev distribution tarball